--- a/home.html
+++ b/home.html
@@ -39,8 +39,8 @@
    <header class="d-flex justify-content-between text-white  mx-3 mb-3">
 <div class="d-flex align-items-center">
     <h1>TV Shows</h1>
-    <div class="dropdown mx-3">
-        <button class="btn btn-secondary dropdown-toggle py-0 bg-dark rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <div class="dropdown">
+        <button class=" mx-3 btn btn-secondary dropdown-toggle py-0 bg-dark rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
        Genres
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
