--- a/profile.html
+++ b/profile.html
@@ -22,7 +22,7 @@
                 <div >
                     Language:
                     <div class=" border-bottom mb-5 pb-3">
-                        <button class="  btn btn-secondary dropdown-toggle py-0 bg-dark rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="  btn btn-secondary dropdown-toggle py-0 bg-dark rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown"  aria-expanded="false">
                           English
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -31,6 +31,7 @@
                           <a class="dropdown-item" href="#">Something else here</a>
                         </div>
                       </div>
+                     
                     </div>
                     <div class="border-bottom border-secondary pb-3 d-flex flex-column">
              <h5 class="mb-3">Maturity Settings:</h5>
