--- a/settings.html
+++ b/settings.html
@@ -75,7 +75,7 @@
     <a href="" class="ms-auto"> Change plan</a>
 </div>
 </div>
-<div class=" d-flex border-bottom border-secondary mb-3">
+<div class=" d-flex border-bottom border-secondary mb-3 pb-3">
     <div  class="text-secondary col-3"><h2>SETTINGS</h2></div>
     <div class="d-flex flex-column col-9">
     <a href="">Parental controls</a>
