--- a/settings.html
+++ b/settings.html
@@ -87,18 +87,34 @@
   
 </div>
 </div>
-<div class=" d-flex align-items-center border-bottom  border-secondary mb-3">
+<div class=" d-flex align-items-center border-secondary mb-3 pb-3">
     <div  class="text-secondary col-3"><h2>MY PROFILE</h2></div>
     <div class="d-flex justify-content-between col-9">
        
     <div class="d-flex col-3" style="width: 50px;"><img src="./Netflix-assets/assets/kids_icon.png" alt="" class="img-fluid  rounded-circle me-3" >Strive Student</div>
 
-<div>
-    <a href="" class="ms-auto"> Change plan</a>
+<div class="d-flex flex-column">
+    <a href="" class="ms-auto">Manage profiles</a>
+    <a href="" class="ms-auto">Add profiile email</a>
 </div>
-<div >
-    <a href=""> Change plan</a>
+
 </div>
+</div>
+<div class=" d-flex align-items-center border-bottom  border-secondary mb-3 pb-3">
+  
+    <div class="d-flex col-9 ms-auto">
+       
+    <div class="d-flex col-3 flex-column"> 
+        <a href="">Language</a>
+        <a href="">Playback settings</a>
+        <a href="">Subtitle appearance</a>
+    </div>
+
+<div class="d-flex flex-column ms-5 ">
+    <a href="" class="">Viewing activity</a>
+    <a href="" class="">Ratings</a>
+</div>
+
 </div>
 </div>
 </div>
