--- a/settings.html
+++ b/settings.html
@@ -61,7 +61,7 @@
 </div>
 <div class=" d-flex justify-content-end mb-3">
     <div class="col-9 d-flex ">
-    <div> admin@strive.school</div>
+    <div><i class="bi bi-paypal">PayPal</i> admin@strive.school</div>
     <div  class="ms-auto d-flex flex-column">
     <a href="" class="mb-3">Update payment info</a>
    <a href="" class="align-self-end">Billing details</a>
