--- a/home.html
+++ b/home.html
@@ -58,31 +58,31 @@
 </header>
 <main class="text-white mx-3 mb-3">
     <h5 class="mb-3">Trending Now</h5>
-    <section class="d-flex mb-3">
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media0.webp" alt="SHERLOCK" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media1.jpg" alt="FACTORY" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media2.webp" alt="GOODPLACE" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media3.webp" alt="SCIENCE" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media4.jpg" alt="CUBA" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media5.webp" alt="HUSTLE" class="img-fluid"></div>
+    <section class="d-flex overflow-hidden mb-3">
+<div class="col-2"><img src="./Netflix-assets/assets/media/media0.webp" alt="SHERLOCK" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media1.jpg" alt="FACTORY" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media2.webp" alt="GOODPLACE" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media3.webp" alt="SCIENCE" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media4.jpg" alt="CUBA" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media5.webp" alt="HUSTLE" class="img-fluid"></div>
     </section>
     <h5 class="mb-3">Watch It Again</h5>
-    <section class="d-flex mb-3">
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media6.jpg" alt="DILEMMA" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media7.webp" alt="AROG" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media8.webp" alt="BATI" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media9.jpg" alt="CONNECTED" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media10.jpg" alt="SPY" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media11.jpg" alt="COLLEGE" class="img-fluid"></div>
+    <section class="d-flex  mb-3">
+<div class="col-2"><img src="./Netflix-assets/assets/media/media6.jpg" alt="DILEMMA" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media7.webp" alt="AROG" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media8.webp" alt="BATI" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media9.jpg" alt="CONNECTED" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media10.jpg" alt="SPY" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media11.jpg" alt="COLLEGE" class="img-fluid"></div>
     </section>
     <h5 class="mb-3">New Releases</h5>
-    <section class="d-flex mb-3">
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media12.jpg" alt="TRIBES" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media13.jpg" alt="NARCOS" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media14.webp" alt="BREAKING BAD" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media15.jpg" alt="EXPLAINED BAD" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media16.webp" alt="R&M" class="img-fluid"></div>
-<div class="col-2 px-1"><img src="./Netflix-assets/assets/media/media17.jpg" alt="HELMETS" class="img-fluid"></div>
+    <section class="d-flex  mb-3">
+<div class="col-2"><img src="./Netflix-assets/assets/media/media12.jpg" alt="TRIBES" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media13.jpg" alt="NARCOS" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media14.webp" alt="BREAKING BAD" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media15.jpg" alt="EXPLAINED BAD" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media16.webp" alt="R&M" class="img-fluid"></div>
+<div class="col-2"><img src="./Netflix-assets/assets/media/media17.jpg" alt="HELMETS" class="img-fluid"></div>
     </section>
 </main>
 <footer >
